force-app/main/default/objects/jrsl_ul_Unsubscribe_Link__mdt/fields/jrsl_ul_Campaign_Type__c.field-meta.xml
<CustomField>
    <fullName>jrsl_ul_Campaign_Type__c</fullName>
    <description>The flow will look for campaigns with a &quot;type&quot; that matches the text here to show up as options for opting out.</description>
    <label>Campaign Type</label>
    <length>30</length>
    <type>Text</type>
</CustomField>