force-app/main/default/objects/jrsl_ul_Unsubscribe_Link__mdt/fields/jrsl_ul_Enable_Preference_Center__c.field-meta.xml
<CustomField>
    <fullName>jrsl_ul_Enable_Preference_Center__c</fullName>
    <defaultValue>&quot;No&quot;</defaultValue>
    <description>The preference center will allow email recipients to unsubscribe from different campaigns.</description>
    <inlineHelpText>The preference center will allow email recipients to unsubscribe from different campaigns.</inlineHelpText>
    <label>Enable Preference Center</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <default>true</default>
                <label>Yes</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>