force-app/main/default/objects/jrsl_ul_Unsubscribe_Link__mdt/fields/jrsl_ul_Opt_in_Status__c.field-meta.xml
<CustomField>
    <fullName>jrsl_ul_Opt_in_Status__c</fullName>
    <description>Only applicable if campaign preference center is also enabled.</description>
    <inlineHelpText>What status should the campaign member record be if the recipient opts in?</inlineHelpText>
    <label>Opt-in Status</label>
    <length>30</length>
    <type>Text</type>
</CustomField>