force-app/main/default/objects/jrsl_ul_Unsubscribe_Link__mdt/fields/jrsl_ul_type_in_Unsubscribe__c.field-meta.xml
<CustomField>
    <fullName>jrsl_ul_type_in_Unsubscribe__c</fullName>
    <defaultValue>&quot;No&quot;</defaultValue>
    <description>Allow email recipients to unsubscribe by typing in their email address if their recordId is not populated automatically.</description>
    <inlineHelpText>Allow email recipients to unsubscribe by typing in their email address if their recordId is not populated automatically.</inlineHelpText>
    <label>Enable Type-in Email Address</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <default>true</default>
                <label>Yes</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>