force-app/main/default/objects/jrsl_ul_Unsubscribe_Link__mdt/fields/One_Click__c.field-meta.xml
<CustomField>
    <fullName>One_Click__c</fullName>
    <label>Allow One Click</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <default>true</default>
                <label>Yes</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>